--- a/.github/workflows/osx.yml
+++ b/.github/workflows/osx.yml
@@ -22,12 +22,16 @@ jobs:
       - name: Checkout PR
         uses: actions/checkout@v2
 
-      - name: Checkout Dependencies
+      - name: Checkout AWS C++ SDK
         uses: actions/checkout@v2
         with:
           repository: "aws/aws-sdk-cpp"
           ref: "1.7.231"
           path: "aws-sdk-cpp"
+
+      - name: Install dependencies
+        run:
+          brew install json-c
 
       - name: Build and install aws-sdk-cpp
         run: |
