--- a/.github/workflows/osx.yml
+++ b/.github/workflows/osx.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Checkout PR
         uses: actions/checkout@v2
         with:
-          submodule: recursive
+          submodules: recursive
 
       - name: Checkout AWS C++ SDK
         uses: actions/checkout@v2
