--- a/verification/cbmc/proofs/Makefile.common
+++ b/verification/cbmc/proofs/Makefile.common
@@ -1,326 +1,1 @@
-# Copyright 2018 Amazon.com, Inc. or its affiliates. All Rights Reserved.
-#
-# Licensed under the Apache License, Version 2.0 (the "License"). You may not use
-# this file except in compliance with the License. A copy of the License is
-# located at
-#
-#     http://aws.amazon.com/apache2.0/
-#
-# or in the "license" file accompanying this file. This file is distributed on an
-# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or
-# implied. See the License for the specific language governing permissions and
-# limitations under the License.
-
-SHELL=/bin/bash
-
-default: report
-
-# if Makefile.local exists, use it. This provides a way to override the defaults
-sinclude Makefile.local
-
-################################################################
-# Define some constants that are hard to reference otherwise
-SPACE :=$() $()
-COMMA :=,
-
-################################################################
-# Useful functions
-
-################################################################
-# Setup paths to binaries
-# By default, use the version on your path; this can be overriden to select particular
-# versions of the tools. /usr/bin/goto-analyzer or ${HOME}/sw/goto-analyzer etc
-GOTO_ANALYZER ?= goto-analyzer
-GOTO_CC ?= goto-cc
-GOTO_INSTRUMENT ?= goto-instrument
-VIEWER ?= cbmc-viewer
-
-################################################################
-# Define locations and binaries
-ABSTRACTIONS ?= ""
-HARNESS_NAME ?= $(ENTRY).c
-
-################################################################
-# Default CBMC flags
-
-#debugability
-CBMC_VERBOSITY ?= ""
-CBMCFLAGS += --flush
-
-#error checking
-CHECKFLAGS += --bounds-check
-CHECKFLAGS += --conversion-check
-CHECKFLAGS += --div-by-zero-check
-#CHECKFLAGS += --enum-range-check
-CHECKFLAGS += --float-overflow-check
-CHECKFLAGS += --nan-check
-CHECKFLAGS += --pointer-check
-CHECKFLAGS += --pointer-overflow-check
-CHECKFLAGS += --pointer-primitive-check
-CHECKFLAGS += --signed-overflow-check
-CHECKFLAGS += --undefined-shift-check
-CHECKFLAGS += --unsigned-overflow-check
-CHECKFLAGS += --unwinding-assertions
-CHECKFLAGS += --malloc-may-fail
-CHECKFLAGS += --malloc-fail-null
-
-CBMCFLAGS += $(CHECKFLAGS)
-
-################################################################
-# Preprocess the unwindset
-ifneq ($(UNWINDSET),)
-CBMC_UNWINDSET := --unwind 1 --unwindset $(subst $(SPACE),$(COMMA),$(strip $(UNWINDSET)))
-endif
-CBMCFLAGS += $(CBMC_UNWINDSET)
-
-################################################################
-# Set C compiler defines
-CBMC_OBJECT_BITS ?= 8
-CBMCFLAGS +=  --object-bits $(CBMC_OBJECT_BITS)
-DEFINES += -DCBMC_OBJECT_BITS=$(CBMC_OBJECT_BITS)
-DEFINES += -DCBMC=1
-
-################################################################
-# Setup directory aliases
-BASEDIR ?= $(abspath ../../../..)
-SRCDIR ?= $(abspath ./link-farm)
-SDKDIR ?= $(abspath ../../../..)
-HELPERDIR ?= $(SDKDIR)/verification/cbmc
-LINKFARM = $(abspath ./link-farm)
-COMMON_REPO_NAME ?= aws-c-common
-COMMONDIR ?= $(HELPERDIR)/$(COMMON_REPO_NAME)
-COMMON_HELPERDIR ?= $(COMMONDIR)/verification/cbmc
-
-################################################################
-# Setup include directory order
-# Helper-inc must go first, so it can override other includes.
-INC += -I$(SRCDIR)/helper-inc
-INC += -I$(SRCDIR)/c-enc-sdk-inc
-INC += -I$(SRCDIR)/c-common-inc
-INC += -I$(SRCDIR)/c-common-helper-inc
-
-################################################################
-# Temporarily disable UNWIND_GOTO, SIMPLIFY until the feature is
-# stable
-UNWIND_GOTO ?= 0
-SIMPLIFY ?= 0
-
-################################################################
-# Enables costly checks (e.g. ones that contain loops)
-# Don't execute deep checks by default
-AWS_DEEP_CHECKS ?= 0
-DEFINES += -DAWS_DEEP_CHECKS=$(AWS_DEEP_CHECKS)
-
-################################################################
-# We always override allocator functions with our own allocator
-# Removing the function from the goto program helps CBMC's
-# function pointer analysis.
-REMOVE_FUNCTION_BODY += --remove-function-body aws_default_allocator
-REMOVE_FUNCTION_BODY += --remove-function-body s_cf_allocator_allocate
-REMOVE_FUNCTION_BODY += --remove-function-body s_cf_allocator_copy_description
-REMOVE_FUNCTION_BODY += --remove-function-body s_cf_allocator_deallocate
-REMOVE_FUNCTION_BODY += --remove-function-body s_cf_allocator_preferred_size
-REMOVE_FUNCTION_BODY += --remove-function-body s_cf_allocator_reallocate
-REMOVE_FUNCTION_BODY += --remove-function-body s_default_calloc
-REMOVE_FUNCTION_BODY += --remove-function-body s_default_free
-REMOVE_FUNCTION_BODY += --remove-function-body s_default_malloc
-REMOVE_FUNCTION_BODY += --remove-function-body s_default_realloc
-
-################################################################
-# We override abort() to be assert(0), as it is not caught by
-# CBMC as a violation. This is in the link-farm c-common
-ABSTRACTIONS += $(LINKFARM)/c-common-helper-stubs/abort_override_assert_false.c
-REMOVE_FUNCTION_BODY += --remove-function-body abort
-################################################################
-
-REMOVE_FUNCTION_BODY += $(ADDITIONAL_REMOVE_FUNCTION_BODY)
-DEPENDENT_GOTOS = $(patsubst %.c,%.goto,$(DEPENDENCIES))
-
-################################################################
-# makes a symlink if one doesn't already exist
-# make_symlink where src dest
-define make_symlink
-	@ cd $(1) ; \
-	if [ ! -h $(3) ] ; then \
-		ln -s $(2) $(3) ; \
-	fi
-endef
-
-################ Make the linkfarm
-linkfarm-dir:
-	mkdir -p link-farm
-
-# If we have dangling links here, batch is not happy. So make them as needed.
-common-symlinks: linkfarm-dir
-	$(call make_symlink, $(LINKFARM), $(COMMONDIR)/include, c-common-inc)
-	$(call make_symlink, $(LINKFARM), $(COMMONDIR)/source, c-common-src)
-
-common-helper-symlinks: linkfarm-dir
-	$(call make_symlink, $(LINKFARM), $(COMMON_HELPERDIR)/include, c-common-helper-inc)
-	$(call make_symlink, $(LINKFARM), $(COMMON_HELPERDIR)/sources, c-common-helper-src)
-	$(call make_symlink, $(LINKFARM), $(COMMON_HELPERDIR)/stubs, c-common-helper-stubs)
-	$(call make_symlink, $(LINKFARM), $(COMMON_HELPERDIR)/uninline, c-common-helper-uninline)
-
-enc-sdk-symlinks: linkfarm-dir
-	$(call make_symlink, $(LINKFARM), $(SDKDIR)/include, c-enc-sdk-inc)
-	$(call make_symlink, $(LINKFARM), $(SDKDIR)/source, c-enc-sdk-src)
-
-harness-symlink: linkfarm-dir
-	$(call make_symlink, $(LINKFARM), ../$(HARNESS_NAME), $(HARNESS_NAME));
-
-helper-symlinks: linkfarm-dir
-	$(call make_symlink, $(LINKFARM), $(HELPERDIR)/include, helper-inc)
-	$(call make_symlink, $(LINKFARM), $(HELPERDIR)/sources, helper-src)
-	$(call make_symlink, $(LINKFARM), $(HELPERDIR)/stubs, helper-stubs)
-
-
-fill-linkfarm: harness-symlink enc-sdk-symlinks common-symlinks common-helper-symlinks helper-symlinks
-
-################################################################
-# Other libraries that use this Makefile template may wish to do
-# actual work here
-setup_dependencies: fill-linkfarm
-	echo "Setting up dependencies"
-
-# Here, whenever there is a change in any of ANSI-C source
-# dependency files, make will take action. However, to make
-# sure changes in the headers files will also trigger make,
-# the user must run make clean first.
-$(ENTRY)0.goto: setup_dependencies $(ENTRY).c $(DEPENDENT_GOTOS)
-	$(GOTO_CC) $(ENTRY).c $(DEPENDENT_GOTOS) \
-	  --export-file-local-symbols $(CBMC_VERBOSITY) \
-	  --function $(ENTRY) $(DEPENDENT_GOTOS) $(INC) $(DEFINES) -o $@ \
-	  2>&1 | tee $(ENTRY)1.log ; exit $${PIPESTATUS[0]}
-
-# Removes specified function bodies. This allows us to replace
-# function definitions with ABSTRACTIONS.
-$(ENTRY)1.goto: $(ENTRY)0.goto
-ifeq ($(REMOVE_FUNCTION_BODY), "")
-	cp $< $@
-	echo "Not removing function bodies" | tee $(ENTRY)1.log ; exit $${PIPESTATUS[0]}
-else
-	$(GOTO_INSTRUMENT) $(REMOVE_FUNCTION_BODY) $< $@ \
-		2>&1 | tee $(ENTRY)2.log ; exit $${PIPESTATUS[0]}
-endif
-
-
-# ABSTRACTIONS is a list of function stubs to use. If a function body
-# is missing and is not abstracted, then it returnes a non
-# deterministic value.
-$(ENTRY)2.goto: $(ENTRY)1.goto
-ifeq ($(ABSTRACTIONS), "")
-	cp $< $@
-	echo "Not implementing abstractions" | tee $(ENTRY)2.log ; exit $${PIPESTATUS[0]}
-else
-	$(GOTO_CC) --function $(ENTRY) $(ABSTRACTIONS) $< $(INC) $(DEFINES) -o $@ \
-		2>&1 | tee $(ENTRY)2.log ; exit $${PIPESTATUS[0]}
-endif
-
-## Temporarily skipped steps
-
-# Simplify and constant propagation may benefit from unwinding first
-$(ENTRY)3.goto: $(ENTRY)2.goto
-ifeq ($(UNWIND_GOTO), 1)
-	$(GOTO_INSTRUMENT) $(UNWINDING) $< $@ \
-		2>&1 | tee $(ENTRY)3.log ; exit $${PIPESTATUS[0]}
-else
-	cp $< $@
-	echo "Not unwinding goto program" | tee $(ENTRY)3.log ; exit $${PIPESTATUS[0]}
-endif
-
-# Skip simplify (and hence generate-function-body) until missing source locations debugged
-$(ENTRY)4.goto: $(ENTRY)3.goto
-ifeq ($(SIMPLIFY), 1)
-	$(GOTO_INSTRUMENT) --generate-function-body '.*' $< $@ \
-		2>&1 | tee $(ENTRY)4.log ; exit $${PIPESTATUS[0]}
-else
-	cp $< $@
-	echo "Not generating-function-bodies in goto program" | tee $(ENTRY)4.log ; exit $${PIPESTATUS[0]}
-endif
-
-# Skip simplify (and hence generate-function-body) until missing source locations debugged
-$(ENTRY)5.goto: $(ENTRY)4.goto
-ifeq ($(SIMPLIFY), 1)
-	$(GOTO_ANALYZER) --simplify $@ $< \
-		2>&1 | tee $(ENTRY)5.log ; exit $${PIPESTATUS[0]}
-else
-	cp $< $@
-	echo "Not simplfying goto program" | tee $(ENTRY)5.log ; exit $${PIPESTATUS[0]}
-endif
-
-# Simplify the goto program by removing any unused function bodies
-$(ENTRY)6.goto: $(ENTRY)5.goto
-	$(GOTO_INSTRUMENT) --drop-unused-functions $< $@ \
-		2>&1 | tee $(ENTRY)6.log ; exit $${PIPESTATUS[0]}
-
-# Simplify the goto program by slicing away initializations of unused
-# global variables
-$(ENTRY)7.goto: $(ENTRY)6.goto
-	$(GOTO_INSTRUMENT) --slice-global-inits $< $@ \
-		2>&1 | tee $(ENTRY)7.log ; exit $${PIPESTATUS[0]}
-
-$(ENTRY).goto: $(ENTRY)7.goto
-	cp $< $@
-
-# Catch-all used for building goto-binaries of the individual
-# dependencies, which are then linked in the $(ENTRY)0.goto rule above
-%.goto: %.c
-	$(GOTO_CC) -c $< --export-file-local-symbols $(CBMC_VERBOSITY) \
-	  $(INC) $(DEFINES) -o $@ \
-	  2>&1 | tee $(dir $<)/$(notdir $<).log ; exit $${PIPESTATUS[0]}
-
-goto: $(ENTRY).goto
-
-cbmc.log: $(ENTRY).goto
-	cbmc $(CBMCFLAGS) --trace $< 2>&1 | tee $@
-
-property.xml: $(ENTRY).goto
-	cbmc $(CBMCFLAGS) --show-properties --xml-ui $< 2>&1 > $@
-
-coverage.xml: $(ENTRY).goto
-	cbmc $(filter-out $(CHECKFLAGS),$(CBMCFLAGS)) --malloc-may-fail --malloc-fail-null --cover location --xml-ui $< 2>&1 > $@
-
-cbmc: cbmc.log
-
-property: property.xml
-
-coverage: coverage.xml
-
-report: cbmc.log property.xml coverage.xml
-	$(VIEWER) \
-	--block coverage.xml \
-	--goto $(ENTRY).goto \
-	--htmldir html \
-	--property property.xml \
-	--result cbmc.log \
-	--srcdir $(SRCDIR) \
-	--srcexclude "(./verification|./tests|./tools|./lib/third_party)"
-
-propertyreport: cbmc.log property.xml
-	$(VIEWER) \
-	--goto $(ENTRY).goto \
-	--htmldir html \
-	--property property.xml \
-	--result cbmc.log \
-	--srcdir $(SRCDIR) \
-	--srcexclude "(./verification|./tests|./tools|./lib/third_party)"
-
-clean:
-	$(RM) *.goto
-	$(RM) $(DEPENDENT_GOTOS)
-	$(RM) *.log
-	$(RM) cbmc.log property.xml coverage.xml TAGS-*
-	$(RM) *~ \#*
-
-veryclean: clean
-	$(RM) -r html
-	$(RM) -r link-farm
-
-gitclean: veryclean
-	$(RM) -r $(COMMONDIR)
-
-.PHONY: cbmc property coverage report clean veryclean common-symlinks harness-symlink fill-linkfarm helper-symlinks ci-yaml
-
-.PHONY: setup_dependencies cbmc property coverage report clean veryclean
-
-include $(HELPERDIR)/proofs/Makefile.cbmc_batch
+../templates/template-for-repository/proofs/Makefile.common
